90% of scene saving/loading done!

--- a/assets/game.config
+++ b/assets/game.config
@@ -1,7 +1,7 @@
 {
     "ambientLight": 0.10000000149011612,
-    "height": 600,
-    "mainScene": "assets/scenes/cubes.static",
-    "name": "RGB Cubes",
-    "width": 800
+    "height": 720,
+    "mainScene": "assets/scenes/main.static",
+    "name": "Game",
+    "width": 1280
 }
