--- a/imgui.ini
+++ b/imgui.ini
@@ -8158,8 +8158,8 @@ Size=317,240
 Collapsed=0
 
 [Window][Scene]
-Pos=261,0
-Size=1353,751
+Pos=261,23
+Size=713,437
 Collapsed=0
 DockId=0x00000007,0
 
@@ -8169,20 +8169,20 @@ Size=167,100
 Collapsed=0
 
 [Window][ Hierarchy]
-Pos=0,0
-Size=259,562
+Pos=0,23
+Size=259,549
 Collapsed=0
 DockId=0x00000008,0
 
 [Window][ Scene]
-Pos=295,23
-Size=711,437
+Pos=261,23
+Size=1353,728
 Collapsed=0
 DockId=0x00000007,0
 
 [Window][DockSpaceViewport_11111111]
-Pos=0,0
-Size=1920,1011
+Pos=0,23
+Size=1920,988
 Collapsed=0
 
 [Window][Hierarchy]
@@ -8212,13 +8212,13 @@ Size=1005,598
 Collapsed=0
 
 [Window][ Assets]
-Pos=1616,0
-Size=304,1011
+Pos=1616,23
+Size=304,988
 Collapsed=0
 DockId=0x00000006,0
 
 [Window][ Save Scene##SaveSceneDialog]
-Pos=60,60
+Pos=141,20
 Size=1133,680
 Collapsed=0
 
@@ -8249,8 +8249,8 @@ Collapsed=0
 DockId=0x00000009,0
 
 [Window][ Components]
-Pos=0,564
-Size=259,447
+Pos=0,574
+Size=259,437
 Collapsed=0
 DockId=0x0000000A,0
 
@@ -8260,7 +8260,7 @@ Size=959,557
 Collapsed=0
 
 [Window][Select Material##SelectMaterial]
-Pos=256,77
+Pos=138,80
 Size=1384,732
 Collapsed=0
 
@@ -8280,6 +8280,11 @@ Pos=1654,0
 Size=266,1011
 Collapsed=0
 DockId=0x0000000E,0
+
+[Window][ Details]
+Pos=1177,529
+Size=616,318
+Collapsed=0
 
 [Table][0xCD1EABA0,4]
 RefScale=18
@@ -8921,8 +8926,36 @@ Column 0  Sort=0v
 RefScale=18
 Column 0  Sort=0v
 
+[Table][0x0EAE18FA,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x53747CBD,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x9BB9EE20,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x23D648A7,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xA3141BCD,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xA51EC5A2,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x92155A6A,4]
+RefScale=18
+Column 0  Sort=0v
+
 [Docking][Data]
-DockSpace             ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=1920,1011 Split=X Selected=0x57ACBA5B
+DockSpace             ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,23 Size=1920,988 Split=X Selected=0x57ACBA5B
   DockNode            ID=0x0000000D Parent=0x8B93E3BD SizeRef=1652,1011 Split=X
     DockNode          ID=0x0000000B Parent=0x0000000D SizeRef=1512,1011 Split=X
       DockNode        ID=0x00000005 Parent=0x0000000B SizeRef=1614,988 Split=X
@@ -8932,8 +8965,8 @@ DockSpace             ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,0 Size=1920,1011 Spl
             DockNode  ID=0x0000000A Parent=0x00000003 SizeRef=293,318 Selected=0xACD52934
           DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=237,412 Selected=0xA07E0404
         DockNode      ID=0x00000002 Parent=0x00000005 SizeRef=713,988 Split=Y Selected=0x57ACBA5B
-          DockNode    ID=0x00000007 Parent=0x00000002 SizeRef=1392,728 CentralNode=1 Selected=0xE192E354
-          DockNode    ID=0x00000009 Parent=0x00000002 SizeRef=1392,258 Selected=0x3CB89FC3
+          DockNode    ID=0x00000007 Parent=0x00000002 SizeRef=713,437 CentralNode=1 Selected=0x57ACBA5B
+          DockNode    ID=0x00000009 Parent=0x00000002 SizeRef=713,258 Selected=0x3CB89FC3
       DockNode        ID=0x00000006 Parent=0x0000000B SizeRef=304,988 Selected=0xB3D94866
     DockNode          ID=0x0000000C Parent=0x0000000D SizeRef=406,1011 Selected=0x563FB158
   DockNode            ID=0x0000000E Parent=0x8B93E3BD SizeRef=266,1011 Selected=0xD44407B5
