--- a/imgui.ini
+++ b/imgui.ini
@@ -8954,6 +8954,18 @@ Column 0  Sort=0v
 RefScale=18
 Column 0  Sort=0v
 
+[Table][0x14DDD76F,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xCDDB27B7,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xDD237CF1,4]
+RefScale=18
+Column 0  Sort=0v
+
 [Docking][Data]
 DockSpace             ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,23 Size=1920,988 Split=X Selected=0x57ACBA5B
   DockNode            ID=0x0000000D Parent=0x8B93E3BD SizeRef=1652,1011 Split=X
