--- a/assets/game.config
+++ b/assets/game.config
@@ -1,5 +1,5 @@
 {
-    "ambientLight": 0.10000000149011612,
+    "ambientLight": 1.0,
     "height": 720,
     "mainScene": "assets/scenes/main.static",
     "name": "Game",
