--- a/imgui.ini
+++ b/imgui.ini
@@ -8170,19 +8170,19 @@ Collapsed=0
 
 [Window][ Hierarchy]
 Pos=0,23
-Size=259,387
+Size=294,549
 Collapsed=0
 DockId=0x00000008,0
 
 [Window][ Scene]
-Pos=261,23
-Size=713,437
+Pos=296,23
+Size=1318,728
 Collapsed=0
 DockId=0x00000007,0
 
 [Window][DockSpaceViewport_11111111]
 Pos=0,23
-Size=1280,697
+Size=1920,988
 Collapsed=0
 
 [Window][Hierarchy]
@@ -8212,8 +8212,8 @@ Size=1005,598
 Collapsed=0
 
 [Window][ Assets]
-Pos=976,23
-Size=304,697
+Pos=1616,23
+Size=304,988
 Collapsed=0
 DockId=0x00000006,0
 
@@ -8243,14 +8243,14 @@ Size=671,577
 Collapsed=0
 
 [Window][ Console]
-Pos=261,462
-Size=713,258
+Pos=296,753
+Size=1318,258
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][ Components]
-Pos=0,412
-Size=259,308
+Pos=0,574
+Size=294,437
 Collapsed=0
 DockId=0x0000000A,0
 
@@ -8294,6 +8294,11 @@ Collapsed=0
 [Window][ Save Material##SaveMaterialDialog]
 Pos=60,60
 Size=840,559
+Collapsed=0
+
+[Window][Debug]
+Pos=60,60
+Size=100,57
 Collapsed=0
 
 [Table][0xCD1EABA0,4]
@@ -9080,17 +9085,197 @@ Column 0  Sort=0v
 RefScale=18
 Column 0  Sort=0v
 
+[Table][0x82F84923,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xDA03CED0,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xE20E9632,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xD763BAD7,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x4174F683,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x7979AE61,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x115C67CD,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x29513F2F,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x0E4C976D,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x50DE377B,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xAF7617C0,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x576DFB66,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x8AE96FE2,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x77C1A94B,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xABB77486,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x5A6EF869,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x20A22F56,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x3C6C8D7E,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xE7841587,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xCBBDB6D9,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x1CC87676,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x3BDFFAD0,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x63EBFEE3,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xCE9B6D9E,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xE7EDFFD0,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x24716C31,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xEE843342,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x76A3D4E2,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x5E521AB6,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x97DAB659,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xD706F36F,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x236E3FA6,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x182D4F1C,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xD03CD48E,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x3F018695,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x4EF3AB65,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x6ACC8917,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xA4349332,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xE7843576,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x10F754B1,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xB56F51C7,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x8D620925,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x8B9CBE49,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xCA5E44A6,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x2552E372,4]
+RefScale=18
+Column 0  Sort=0v
+
 [Docking][Data]
-DockSpace             ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,23 Size=1280,697 Split=X Selected=0x57ACBA5B
+DockSpace             ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,23 Size=1920,988 Split=X Selected=0x57ACBA5B
   DockNode            ID=0x0000000D Parent=0x8B93E3BD SizeRef=1652,1011 Split=X
     DockNode          ID=0x0000000B Parent=0x0000000D SizeRef=1512,1011 Split=X
       DockNode        ID=0x00000005 Parent=0x0000000B SizeRef=1614,988 Split=X
-        DockNode      ID=0x00000001 Parent=0x00000005 SizeRef=259,988 Split=Y Selected=0xB1CF606A
+        DockNode      ID=0x00000001 Parent=0x00000005 SizeRef=294,988 Split=Y Selected=0xB1CF606A
           DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=237,574 Split=Y Selected=0xB1CF606A
-            DockNode  ID=0x00000008 Parent=0x00000003 SizeRef=293,400 Selected=0xB1CF606A
-            DockNode  ID=0x0000000A Parent=0x00000003 SizeRef=293,318 Selected=0xACD52934
+            DockNode  ID=0x00000008 Parent=0x00000003 SizeRef=287,387 Selected=0xB1CF606A
+            DockNode  ID=0x0000000A Parent=0x00000003 SizeRef=287,308 Selected=0xACD52934
           DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=237,412 Selected=0xA07E0404
-        DockNode      ID=0x00000002 Parent=0x00000005 SizeRef=713,988 Split=Y Selected=0x57ACBA5B
+        DockNode      ID=0x00000002 Parent=0x00000005 SizeRef=1318,988 Split=Y Selected=0x57ACBA5B
           DockNode    ID=0x00000007 Parent=0x00000002 SizeRef=713,437 CentralNode=1 Selected=0x57ACBA5B
           DockNode    ID=0x00000009 Parent=0x00000002 SizeRef=713,258 Selected=0x3CB89FC3
       DockNode        ID=0x00000006 Parent=0x0000000B SizeRef=304,988 Selected=0xB3D94866
