--- a/assets/game.config
+++ b/assets/game.config
@@ -1,7 +1,7 @@
 {
     "ambientLight": 1.0,
     "height": 720,
-    "mainScene": "assets/scenes/main.static",
+    "mainScene": "assets/scenes/flappy_clone.static",
     "name": "Game",
     "width": 1280
 }
