--- a/imgui.ini
+++ b/imgui.ini
@@ -9289,6 +9289,14 @@ Column 0  Sort=0v
 RefScale=18
 Column 0  Sort=0v
 
+[Table][0xDC8D3D55,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xE28ABBD8,4]
+RefScale=18
+Column 0  Sort=0v
+
 [Docking][Data]
 DockSpace             ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,23 Size=1280,697 Split=X Selected=0x57ACBA5B
   DockNode            ID=0x0000000D Parent=0x8B93E3BD SizeRef=1652,1011 Split=X
