Added Layers & Logging

--- a/assets/game.config
+++ b/assets/game.config
@@ -1,6 +1,11 @@
 {
     "ambientLight": 1.0,
     "height": 720,
+    "layers": [
+        "Default",
+        "New Layer",
+        "a"
+    ],
     "mainScene": "assets/scenes/flappy_clone.static",
     "name": "Game",
     "width": 1280
