--- a/imgui.ini
+++ b/imgui.ini
@@ -8301,6 +8301,11 @@ Pos=60,60
 Size=100,57
 Collapsed=0
 
+[Window][ Layers]
+Pos=333,78
+Size=494,252
+Collapsed=0
+
 [Table][0xCD1EABA0,4]
 RefScale=18
 Column 0  Sort=0v
@@ -9306,6 +9311,14 @@ RefScale=18
 Column 0  Sort=0v
 
 [Table][0x9C1528AE,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x81C9F789,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x303D8F00,4]
 RefScale=18
 Column 0  Sort=0v
 
