Updated stuff i guess

--- a/assets/game.config
+++ b/assets/game.config
@@ -1,12 +1,7 @@
 {
-    "ambientLight": 1.0,
+    "ambientLight": 0.2199999988079071,
     "height": 720,
-    "layers": [
-        "Default",
-        "New Layer",
-        "a"
-    ],
-    "mainScene": "assets/scenes/flappy_clone.static",
+    "mainScene": "assets/scenes/main.static",
     "name": "Game",
     "width": 1280
 }
