--- a/imgui.ini
+++ b/imgui.ini
@@ -8170,19 +8170,19 @@ Collapsed=0
 
 [Window][ Hierarchy]
 Pos=0,23
-Size=294,387
+Size=294,549
 Collapsed=0
 DockId=0x00000008,0
 
 [Window][ Scene]
 Pos=296,23
-Size=702,437
+Size=1077,728
 Collapsed=0
 DockId=0x00000007,0
 
 [Window][DockSpaceViewport_11111111]
 Pos=0,23
-Size=1280,697
+Size=1920,988
 Collapsed=0
 
 [Window][Hierarchy]
@@ -8212,8 +8212,8 @@ Size=1005,598
 Collapsed=0
 
 [Window][ Assets]
-Pos=1000,23
-Size=280,697
+Pos=1375,23
+Size=545,988
 Collapsed=0
 DockId=0x00000006,0
 
@@ -8243,14 +8243,14 @@ Size=671,577
 Collapsed=0
 
 [Window][ Console]
-Pos=296,462
-Size=702,258
+Pos=296,753
+Size=1077,258
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][ Components]
-Pos=0,412
-Size=294,308
+Pos=0,574
+Size=294,437
 Collapsed=0
 DockId=0x0000000A,0
 
@@ -8260,7 +8260,7 @@ Size=959,557
 Collapsed=0
 
 [Window][Select Material##SelectMaterial]
-Pos=239,169
+Pos=934,306
 Size=613,460
 Collapsed=0
 
@@ -8287,8 +8287,8 @@ Size=616,318
 Collapsed=0
 
 [Window][ Inspector]
-Pos=292,121
-Size=589,333
+Pos=444,296
+Size=589,331
 Collapsed=0
 
 [Window][ Save Material##SaveMaterialDialog]
@@ -8304,6 +8304,11 @@ Collapsed=0
 [Window][ Layers]
 Pos=333,78
 Size=494,252
+Collapsed=0
+
+[Window][AFADF]
+Pos=-1,375
+Size=343,277
 Collapsed=0
 
 [Table][0xCD1EABA0,4]
@@ -9322,20 +9327,32 @@ Column 0  Sort=0v
 RefScale=18
 Column 0  Sort=0v
 
+[Table][0x989A9245,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xCC22B471,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xD95868AA,4]
+RefScale=18
+Column 0  Sort=0v
+
 [Docking][Data]
-DockSpace             ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,23 Size=1280,697 Split=X Selected=0x57ACBA5B
+DockSpace             ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,23 Size=1920,988 Split=X Selected=0x57ACBA5B
   DockNode            ID=0x0000000D Parent=0x8B93E3BD SizeRef=1652,1011 Split=X
     DockNode          ID=0x0000000B Parent=0x0000000D SizeRef=1512,1011 Split=X
-      DockNode        ID=0x00000005 Parent=0x0000000B SizeRef=998,988 Split=X
+      DockNode        ID=0x00000005 Parent=0x0000000B SizeRef=1373,988 Split=X
         DockNode      ID=0x00000001 Parent=0x00000005 SizeRef=294,988 Split=Y Selected=0xB1CF606A
           DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=237,574 Split=Y Selected=0xB1CF606A
             DockNode  ID=0x00000008 Parent=0x00000003 SizeRef=287,387 Selected=0xB1CF606A
             DockNode  ID=0x0000000A Parent=0x00000003 SizeRef=287,308 Selected=0xACD52934
           DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=237,412 Selected=0xA07E0404
-        DockNode      ID=0x00000002 Parent=0x00000005 SizeRef=702,988 Split=Y Selected=0x57ACBA5B
-          DockNode    ID=0x00000007 Parent=0x00000002 SizeRef=713,437 CentralNode=1 Selected=0x57ACBA5B
+        DockNode      ID=0x00000002 Parent=0x00000005 SizeRef=1077,988 Split=Y Selected=0x57ACBA5B
+          DockNode    ID=0x00000007 Parent=0x00000002 SizeRef=713,728 CentralNode=1 Selected=0x57ACBA5B
           DockNode    ID=0x00000009 Parent=0x00000002 SizeRef=713,258 Selected=0x3CB89FC3
-      DockNode        ID=0x00000006 Parent=0x0000000B SizeRef=280,988 Selected=0xB3D94866
+      DockNode        ID=0x00000006 Parent=0x0000000B SizeRef=545,988 Selected=0xB3D94866
     DockNode          ID=0x0000000C Parent=0x0000000D SizeRef=406,1011 Selected=0x563FB158
   DockNode            ID=0x0000000E Parent=0x8B93E3BD SizeRef=266,1011 Selected=0xD44407B5
 
