Added Gizmos, unselecting an entity

--- a/assets/game.config
+++ b/assets/game.config
@@ -1,7 +1,9 @@
 {
-    "ambientLight": 0.2199999988079071,
+    "ambientLight": 1.0,
+    "fullscreen_on_launch": true,
     "height": 720,
     "mainScene": "assets/scenes/main.static",
-    "name": "Game",
+    "name": "Shatty Bird",
+    "resizable": false,
     "width": 1280
 }
