--- a/imgui.ini
+++ b/imgui.ini
@@ -1,5 +1,5 @@
 [Window][Debug##Default]
-Pos=168,33
+Pos=168,32
 Size=836,295
 Collapsed=0
 
@@ -8158,8 +8158,7 @@ Size=317,240
 Collapsed=0
 
 [Window][Scene]
-Pos=261,23
-Size=713,437
+Size=400,400
 Collapsed=0
 DockId=0x00000007,0
 
@@ -8170,19 +8169,19 @@ Collapsed=0
 
 [Window][ Hierarchy]
 Pos=0,23
-Size=325,387
+Size=340,562
 Collapsed=0
 DockId=0x00000008,0
 
 [Window][ Scene]
-Pos=327,23
-Size=624,437
+Pos=342,23
+Size=1201,720
 Collapsed=0
 DockId=0x00000007,0
 
 [Window][DockSpaceViewport_11111111]
 Pos=0,23
-Size=1280,697
+Size=1920,988
 Collapsed=0
 
 [Window][Hierarchy]
@@ -8194,7 +8193,7 @@ Collapsed=0
 Pos=0,430
 Size=293,290
 Collapsed=0
-DockId=0x00000004,0
+DockId=0x00000001,0
 
 [Window][Choose Diffuse##ChooseDiffuse]
 Pos=69,111
@@ -8212,10 +8211,10 @@ Size=1005,598
 Collapsed=0
 
 [Window][ Assets]
-Pos=953,23
-Size=327,697
+Pos=1545,23
+Size=375,988
 Collapsed=0
-DockId=0x00000006,0
+DockId=0x00000005,0
 
 [Window][ Save Scene##SaveSceneDialog]
 Pos=141,20
@@ -8243,14 +8242,14 @@ Size=671,577
 Collapsed=0
 
 [Window][ Console]
-Pos=327,462
-Size=624,258
+Pos=342,745
+Size=1201,266
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][ Components]
-Pos=0,412
-Size=325,308
+Pos=0,587
+Size=340,424
 Collapsed=0
 DockId=0x0000000A,0
 
@@ -8287,7 +8286,8 @@ Size=616,318
 Collapsed=0
 
 [Window][ Inspector]
-Pos=444,296
+ViewportPos=944,287
+ViewportId=0x90AF4B16
 Size=589,331
 Collapsed=0
 
@@ -8309,6 +8309,31 @@ Collapsed=0
 [Window][AFADF]
 Pos=-1,375
 Size=343,277
+Collapsed=0
+
+[Window][Build##BuildWindowsDialog]
+Pos=60,60
+Size=788,564
+Collapsed=0
+
+[Window][Build##BuildLinuxDialog]
+Pos=60,60
+Size=495,386
+Collapsed=0
+
+[Window][Build for Linux##BuildLinuxDialog]
+Pos=60,60
+Size=741,513
+Collapsed=0
+
+[Window][Build for Windows##BuildWindowsDialog]
+Pos=60,60
+Size=755,591
+Collapsed=0
+
+[Window][Select XML##SelectXML]
+Pos=295,174
+Size=471,424
 Collapsed=0
 
 [Table][0xCD1EABA0,4]
@@ -9339,20 +9364,88 @@ Column 0  Sort=0v
 RefScale=18
 Column 0  Sort=0v
 
+[Table][0xD76C7B3F,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xE96BFDB2,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x1F6EC12F,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xCCC19925,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xB186E99D,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x6229B197,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xF25A0571,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x21F55D7B,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x9F1A3EC7,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x4CB566CD,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x733BDD89,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xF7B32740,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x70764B59,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xDC8453CD,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x7DC142E4,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x92003ED0,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xA383D242,4]
+RefScale=18
+Column 0  Sort=0v
+
 [Docking][Data]
-DockSpace             ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,23 Size=1280,697 Split=X Selected=0x57ACBA5B
-  DockNode            ID=0x0000000D Parent=0x8B93E3BD SizeRef=1652,1011 Split=X
-    DockNode          ID=0x0000000B Parent=0x0000000D SizeRef=1512,1011 Split=X
-      DockNode        ID=0x00000005 Parent=0x0000000B SizeRef=1591,988 Split=X
-        DockNode      ID=0x00000001 Parent=0x00000005 SizeRef=325,988 Split=Y Selected=0xB1CF606A
-          DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=237,574 Split=Y Selected=0xB1CF606A
-            DockNode  ID=0x00000008 Parent=0x00000003 SizeRef=287,387 Selected=0xB1CF606A
-            DockNode  ID=0x0000000A Parent=0x00000003 SizeRef=287,308 Selected=0xACD52934
-          DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=237,412 Selected=0xA07E0404
-        DockNode      ID=0x00000002 Parent=0x00000005 SizeRef=1264,988 Split=Y Selected=0x57ACBA5B
-          DockNode    ID=0x00000007 Parent=0x00000002 SizeRef=713,728 CentralNode=1 Selected=0x57ACBA5B
-          DockNode    ID=0x00000009 Parent=0x00000002 SizeRef=713,258 Selected=0x3CB89FC3
-      DockNode        ID=0x00000006 Parent=0x0000000B SizeRef=327,988 Selected=0xB3D94866
-    DockNode          ID=0x0000000C Parent=0x0000000D SizeRef=406,1011 Selected=0x563FB158
-  DockNode            ID=0x0000000E Parent=0x8B93E3BD SizeRef=266,1011 Selected=0xD44407B5
+DockSpace             ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,92 Size=1920,988 Split=X Selected=0x57ACBA5B
+  DockNode            ID=0x00000003 Parent=0x8B93E3BD SizeRef=1543,697 Split=X
+    DockNode          ID=0x00000004 Parent=0x00000003 SizeRef=340,697 Split=Y Selected=0xACD52934
+      DockNode        ID=0x00000008 Parent=0x00000004 SizeRef=296,396 Selected=0xB1CF606A
+      DockNode        ID=0x0000000A Parent=0x00000004 SizeRef=296,299 Selected=0xACD52934
+    DockNode          ID=0x00000006 Parent=0x00000003 SizeRef=1201,697 Split=X
+      DockNode        ID=0x0000000D Parent=0x00000006 SizeRef=1652,1011 Split=X
+        DockNode      ID=0x0000000B Parent=0x0000000D SizeRef=1512,1011 Split=X
+          DockNode    ID=0x00000001 Parent=0x0000000B SizeRef=325,988 Selected=0xB1CF606A
+          DockNode    ID=0x00000002 Parent=0x0000000B SizeRef=675,988 Split=Y Selected=0x57ACBA5B
+            DockNode  ID=0x00000007 Parent=0x00000002 SizeRef=713,429 CentralNode=1 Selected=0x57ACBA5B
+            DockNode  ID=0x00000009 Parent=0x00000002 SizeRef=713,266 Selected=0x3CB89FC3
+        DockNode      ID=0x0000000C Parent=0x0000000D SizeRef=406,1011 Selected=0x563FB158
+      DockNode        ID=0x0000000E Parent=0x00000006 SizeRef=266,1011 Selected=0xD44407B5
+  DockNode            ID=0x00000005 Parent=0x8B93E3BD SizeRef=375,697 Selected=0xB3D94866
 
