--- a/assets/game.config
+++ b/assets/game.config
@@ -1,5 +1,5 @@
 {
-    "ambientLight": 1.0,
+    "ambientLight": 0.20999999344348907,
     "fullscreen_on_launch": true,
     "height": 720,
     "mainScene": "assets/scenes/main.static",
