Fixed some stuff

--- a/assets/game.config
+++ b/assets/game.config
@@ -1,9 +1,9 @@
 {
     "ambientLight": 0.20999999344348907,
-    "fullscreen_on_launch": true,
+    "fullscreen_on_launch": false,
     "height": 720,
-    "mainScene": "assets/scenes/main.static",
-    "name": "Shatty Bird",
+    "mainScene": "assets/scenes/3d-physics.static",
+    "name": "3D Physics",
     "resizable": false,
     "width": 1280
 }
