--- a/imgui.ini
+++ b/imgui.ini
@@ -1,5 +1,5 @@
 [Window][Debug##Default]
-Pos=168,32
+Pos=210,144
 Size=836,295
 Collapsed=0
 
@@ -8169,13 +8169,13 @@ Collapsed=0
 
 [Window][ Hierarchy]
 Pos=0,23
-Size=340,562
+Size=378,489
 Collapsed=0
 DockId=0x00000008,0
 
 [Window][ Scene]
-Pos=342,23
-Size=1201,720
+Pos=380,23
+Size=1205,660
 Collapsed=0
 DockId=0x00000007,0
 
@@ -8211,8 +8211,8 @@ Size=1005,598
 Collapsed=0
 
 [Window][ Assets]
-Pos=1545,23
-Size=375,988
+Pos=1587,23
+Size=333,988
 Collapsed=0
 DockId=0x00000005,0
 
@@ -8242,25 +8242,25 @@ Size=671,577
 Collapsed=0
 
 [Window][ Console]
-Pos=342,745
-Size=1201,266
+Pos=380,685
+Size=1205,326
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][ Components]
-Pos=0,587
-Size=340,424
+Pos=0,514
+Size=378,497
 Collapsed=0
 DockId=0x0000000A,0
 
 [Window][Choose Script##ChooseScript]
-Pos=204,144
+Pos=437,233
 Size=959,557
 Collapsed=0
 
 [Window][Select Material##SelectMaterial]
-Pos=934,306
-Size=613,460
+Pos=719,394
+Size=727,600
 Collapsed=0
 
 [Window][Aasdfsdfasfdssets]
@@ -8322,18 +8322,68 @@ Size=495,386
 Collapsed=0
 
 [Window][Build for Linux##BuildLinuxDialog]
-Pos=60,60
+Pos=314,54
 Size=741,513
 Collapsed=0
 
 [Window][Build for Windows##BuildWindowsDialog]
-Pos=60,60
+Pos=332,-58
 Size=755,591
 Collapsed=0
 
 [Window][Select XML##SelectXML]
 Pos=295,174
 Size=471,424
+Collapsed=0
+
+[Window][ Animatior]
+Pos=60,60
+Size=129,83
+Collapsed=0
+
+[Window][##SceneMenuBar]
+Pos=0,1011
+Size=1920,62
+Collapsed=0
+
+[Window][##MainMenuBar]
+Size=1920,39
+Collapsed=0
+
+[Window][ UI]
+Pos=378,23
+Size=1210,691
+Collapsed=0
+DockId=0x00000007,1
+
+[Window][##ScenePanel]
+Pos=378,23
+Size=570,400
+Collapsed=0
+DockId=0x00000007,0
+
+[Window][Scene Panel]
+Pos=378,23
+Size=570,400
+Collapsed=0
+DockId=0x00000007,0
+
+[Window][ Scene Panel]
+Pos=378,23
+Size=1210,691
+Collapsed=0
+DockId=0x00000007,0
+
+[Window][ Scene Panel]
+Pos=378,23
+Size=567,369
+Collapsed=0
+DockId=0x00000007,0
+
+[Window][Dear ImGui Demo]
+ViewportPos=782,338
+ViewportId=0xE927CF2F
+Size=550,680
 Collapsed=0
 
 [Table][0xCD1EABA0,4]
@@ -9432,20 +9482,172 @@ Column 0  Sort=0v
 RefScale=18
 Column 0  Sort=0v
 
+[Table][0xDEC27F99,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x6001F008,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x660B2E67,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x2C1E160E,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x5EA6DB8A,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x8846C7C1,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x43BD15F6,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xC603F168,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x66C44700,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xE24CBDC9,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x6652D3F4,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x8A9C568F,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xC9419000,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x4DC96AC9,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x1A6AF6EA,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x841D521F,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x30B8BAB1,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xE9BE71D6,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xBA9036BA,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x4DEDD774,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xE7616A4B,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x5BB410C2,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x3A3FAFD0,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x19C07027,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x50F7E977,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x03BC9E08,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x0624E8D4,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x4AB9D5EE,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x8ADDBF6F,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x6CCEDC06,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x7C368740,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x451C7535,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x756A3473,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x312A4901,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xE1B6388C,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x653EC245,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x4AF5F864,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xE96F7CA4,4]
+RefScale=18
+Column 0  Sort=0v
+
 [Docking][Data]
 DockSpace             ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,92 Size=1920,988 Split=X Selected=0x57ACBA5B
-  DockNode            ID=0x00000003 Parent=0x8B93E3BD SizeRef=1543,697 Split=X
-    DockNode          ID=0x00000004 Parent=0x00000003 SizeRef=340,697 Split=Y Selected=0xACD52934
-      DockNode        ID=0x00000008 Parent=0x00000004 SizeRef=296,396 Selected=0xB1CF606A
-      DockNode        ID=0x0000000A Parent=0x00000004 SizeRef=296,299 Selected=0xACD52934
-    DockNode          ID=0x00000006 Parent=0x00000003 SizeRef=1201,697 Split=X
+  DockNode            ID=0x00000003 Parent=0x8B93E3BD SizeRef=945,697 Split=X
+    DockNode          ID=0x00000004 Parent=0x00000003 SizeRef=378,697 Split=Y Selected=0xACD52934
+      DockNode        ID=0x00000008 Parent=0x00000004 SizeRef=376,345 Selected=0xB1CF606A
+      DockNode        ID=0x0000000A Parent=0x00000004 SizeRef=376,350 Selected=0xACD52934
+    DockNode          ID=0x00000006 Parent=0x00000003 SizeRef=565,697 Split=X
       DockNode        ID=0x0000000D Parent=0x00000006 SizeRef=1652,1011 Split=X
         DockNode      ID=0x0000000B Parent=0x0000000D SizeRef=1512,1011 Split=X
           DockNode    ID=0x00000001 Parent=0x0000000B SizeRef=325,988 Selected=0xB1CF606A
           DockNode    ID=0x00000002 Parent=0x0000000B SizeRef=675,988 Split=Y Selected=0x57ACBA5B
-            DockNode  ID=0x00000007 Parent=0x00000002 SizeRef=713,429 CentralNode=1 Selected=0x57ACBA5B
-            DockNode  ID=0x00000009 Parent=0x00000002 SizeRef=713,266 Selected=0x3CB89FC3
+            DockNode  ID=0x00000007 Parent=0x00000002 SizeRef=713,660 CentralNode=1 Selected=0x57ACBA5B
+            DockNode  ID=0x00000009 Parent=0x00000002 SizeRef=713,326 Selected=0x3CB89FC3
         DockNode      ID=0x0000000C Parent=0x0000000D SizeRef=406,1011 Selected=0x563FB158
       DockNode        ID=0x0000000E Parent=0x00000006 SizeRef=266,1011 Selected=0xD44407B5
-  DockNode            ID=0x00000005 Parent=0x8B93E3BD SizeRef=375,697 Selected=0xB3D94866
+  DockNode            ID=0x00000005 Parent=0x8B93E3BD SizeRef=333,697 Selected=0xB3D94866
 
