--- a/imgui.ini
+++ b/imgui.ini
@@ -8169,13 +8169,13 @@ Collapsed=0
 
 [Window][ Hierarchy]
 Pos=0,23
-Size=378,489
+Size=377,545
 Collapsed=0
-DockId=0x00000008,0
+DockId=0x00000003,0
 
 [Window][ Scene]
-Pos=380,23
-Size=1205,660
+Pos=379,23
+Size=1201,660
 Collapsed=0
 DockId=0x00000007,0
 
@@ -8211,13 +8211,13 @@ Size=1005,598
 Collapsed=0
 
 [Window][ Assets]
-Pos=1587,23
-Size=333,988
+Pos=1582,23
+Size=338,988
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x0000000A,0
 
 [Window][ Save Scene##SaveSceneDialog]
-Pos=141,20
+Pos=103,-18
 Size=1133,680
 Collapsed=0
 
@@ -8242,16 +8242,16 @@ Size=671,577
 Collapsed=0
 
 [Window][ Console]
-Pos=380,685
-Size=1205,326
+Pos=379,685
+Size=1201,326
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][ Components]
-Pos=0,514
-Size=378,497
+Pos=0,570
+Size=377,441
 Collapsed=0
-DockId=0x0000000A,0
+DockId=0x00000005,0
 
 [Window][Choose Script##ChooseScript]
 Pos=437,233
@@ -8259,7 +8259,8 @@ Size=959,557
 Collapsed=0
 
 [Window][Select Material##SelectMaterial]
-Pos=719,394
+ViewportPos=758,365
+ViewportId=0x6F16E1EB
 Size=727,600
 Collapsed=0
 
@@ -8286,13 +8287,12 @@ Size=616,318
 Collapsed=0
 
 [Window][ Inspector]
-ViewportPos=944,287
-ViewportId=0x90AF4B16
+Pos=196,111
 Size=589,331
 Collapsed=0
 
 [Window][ Save Material##SaveMaterialDialog]
-Pos=60,60
+Pos=22,22
 Size=840,559
 Collapsed=0
 
@@ -8302,7 +8302,7 @@ Size=100,57
 Collapsed=0
 
 [Window][ Layers]
-Pos=333,78
+Pos=295,40
 Size=494,252
 Collapsed=0
 
@@ -8384,6 +8384,19 @@ DockId=0x00000007,0
 ViewportPos=782,338
 ViewportId=0xE927CF2F
 Size=550,680
+Collapsed=0
+
+[Window][Launcher]
+Size=1280,720
+Collapsed=0
+
+[Window][ Side Panel]
+Size=304,720
+Collapsed=0
+
+[Window][ Projects]
+Pos=311,0
+Size=969,720
 Collapsed=0
 
 [Table][0xCD1EABA0,4]
@@ -9634,20 +9647,70 @@ Column 0  Sort=0v
 RefScale=18
 Column 0  Sort=0v
 
+[Table][0xFFCB12A8,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xAA5A1077,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x1DB3348E,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x61F128BC,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x9F06303F,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0xB47C4D30,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x73AAA027,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x32685AC8,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x0893B414,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x49514EFB,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x5E3E1A66,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x1FFCE089,4]
+RefScale=18
+Column 0  Sort=0v
+
 [Docking][Data]
-DockSpace             ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,92 Size=1920,988 Split=X Selected=0x57ACBA5B
-  DockNode            ID=0x00000003 Parent=0x8B93E3BD SizeRef=945,697 Split=X
-    DockNode          ID=0x00000004 Parent=0x00000003 SizeRef=378,697 Split=Y Selected=0xACD52934
-      DockNode        ID=0x00000008 Parent=0x00000004 SizeRef=376,345 Selected=0xB1CF606A
-      DockNode        ID=0x0000000A Parent=0x00000004 SizeRef=376,350 Selected=0xACD52934
-    DockNode          ID=0x00000006 Parent=0x00000003 SizeRef=565,697 Split=X
-      DockNode        ID=0x0000000D Parent=0x00000006 SizeRef=1652,1011 Split=X
-        DockNode      ID=0x0000000B Parent=0x0000000D SizeRef=1512,1011 Split=X
-          DockNode    ID=0x00000001 Parent=0x0000000B SizeRef=325,988 Selected=0xB1CF606A
-          DockNode    ID=0x00000002 Parent=0x0000000B SizeRef=675,988 Split=Y Selected=0x57ACBA5B
-            DockNode  ID=0x00000007 Parent=0x00000002 SizeRef=713,660 CentralNode=1 Selected=0x57ACBA5B
-            DockNode  ID=0x00000009 Parent=0x00000002 SizeRef=713,326 Selected=0x3CB89FC3
-        DockNode      ID=0x0000000C Parent=0x0000000D SizeRef=406,1011 Selected=0x563FB158
-      DockNode        ID=0x0000000E Parent=0x00000006 SizeRef=266,1011 Selected=0xD44407B5
-  DockNode            ID=0x00000005 Parent=0x8B93E3BD SizeRef=333,697 Selected=0xB3D94866
+DockSpace               ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,92 Size=1920,988 Split=X Selected=0x57ACBA5B
+  DockNode              ID=0x00000008 Parent=0x8B93E3BD SizeRef=1580,988 Split=X
+    DockNode            ID=0x00000004 Parent=0x00000008 SizeRef=377,988 Split=Y Selected=0xB1CF606A
+      DockNode          ID=0x00000003 Parent=0x00000004 SizeRef=377,545 Selected=0xB1CF606A
+      DockNode          ID=0x00000005 Parent=0x00000004 SizeRef=377,441 Selected=0xACD52934
+    DockNode            ID=0x00000006 Parent=0x00000008 SizeRef=1201,988 Split=X
+      DockNode          ID=0x0000000F Parent=0x00000006 SizeRef=304,720 Selected=0xF784E5DD
+      DockNode          ID=0x00000010 Parent=0x00000006 SizeRef=974,720 Split=X
+        DockNode        ID=0x0000000D Parent=0x00000010 SizeRef=1652,1011 Split=X
+          DockNode      ID=0x0000000B Parent=0x0000000D SizeRef=1512,1011 Split=X
+            DockNode    ID=0x00000001 Parent=0x0000000B SizeRef=325,988 Selected=0xB1CF606A
+            DockNode    ID=0x00000002 Parent=0x0000000B SizeRef=675,988 Split=Y Selected=0x57ACBA5B
+              DockNode  ID=0x00000007 Parent=0x00000002 SizeRef=713,660 CentralNode=1 Selected=0x57ACBA5B
+              DockNode  ID=0x00000009 Parent=0x00000002 SizeRef=713,326 Selected=0x3CB89FC3
+          DockNode      ID=0x0000000C Parent=0x0000000D SizeRef=406,1011 Selected=0x563FB158
+        DockNode        ID=0x0000000E Parent=0x00000010 SizeRef=266,1011 Selected=0xD44407B5
+  DockNode              ID=0x0000000A Parent=0x8B93E3BD SizeRef=338,988 Selected=0xB3D94866
 
