Added scene states, and i think much more

--- a/assets/game.config
+++ b/assets/game.config
@@ -1,9 +1,13 @@
 {
-    "ambientLight": 0.3700000047683716,
-    "fullscreen_on_launch": false,
+    "ambientLight": 0.12999999523162842,
     "height": 720,
-    "mainScene": "assets/scenes/3d-physics.static",
+    "layers": [
+        "Default",
+        "TestLayer"
+    ],
+    "resizable": true,
+    "fullscreen_on_launch": false,
+    "mainScene": "assets/scenes/a-star-ai.static",
     "name": "3D Physics",
-    "resizable": false,
     "width": 1280
 }
